--- a/estilo.css
+++ b/estilo.css
@@ -78,6 +78,7 @@ nav a:hover {
 .conteudo-padrao {
   background-color: #f5efe3;
   border: 3px solid #5e4430;
+  border-radius: 10px;
   padding: 20px;
   font-family: Georgia, serif;
   margin: 20px;
