--- a/estilo.css
+++ b/estilo.css
@@ -75,6 +75,12 @@ nav a:hover {
   background-color: #333;
 }
 
+.todo-conteudo{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .conteudo-padrao {
   background-color: #f5efe3;
   border: 3px solid #5e4430;
